test/pass/transform/functionInlining/test.twge
// OPTION: --print-ast-after --run-only=functionInling
def actionA() : actions {
    print(text = "A");
}

def actionB() : actions {
    actionA();
    print(text = "B");
    actionA();
}

def actionC() : actions {
    actionB();
    print(text = "C");
    actionB();
}

def actionD() : actions {
    actionC();
    print(text = "D");
    actionC();
}

block init {
    actions {
        actionD();
    }
}