test/fail/transform/useBeforeDefine/test.twge
def actionA() : actions {
    actionA();
    actionB();
    actionC();
    actionD();
}

def actionB() : actions {
    actionA();
    actionB();
    actionC();
    actionD();
}

def actionC() : actions {
    actionA();
    actionB();
    actionC();
    actionD();
}

def actionD() : actions {
    actionA();
    actionB();
    actionC();
    actionD();
}